# BRFP

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  docker-sdk.md  ims-compact-format.md  project-plan.md  release.md  roadmap.md  testing-strategy.md  work-breakdown.md
docs/decisions/: 0001-initial-reader-writer-strategy.md
docs/research/: baf-uv-conversion-strategy.md  mzpeak4trfr-metadata-mapping-handoff.md  repo-analysis.md
docs/reviews/: adversarial-2026-06-18.md  adversarial-synthesis-2026-06-19.md  cross-project-comparison-2026-06-19.md  refactor-plan-2026-06-19.md
scripts/: docker-sdk-test.sh  release-guard.sh
src/: baf.rs  cli.rs  input.rs  lib.rs  logging.rs  main.rs  mzpeak_writer.rs  pipeline.rs  schema.rs  sdk.rs  tsf.rs  uv.rs  validation.rs  vendor_metadata.rs
tests/: mzpeak_e2e.rs
